# mss-metro-ai

./: .env.local  ARCHITECTURE.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: celery_app.py  main.py
app/clients/: cache.py  cache_client.py  opensearch.py  rag_client.py  s3.py  s3_client.py  sqs_client.py
app/core/: logger.py  settings.py
app/routes/: health.py  queries.py  uploads.py
app/schemas/: query.py  upload.py
app/services/: embedding_service.py  langchain_service.py  vlm_service.py
app/utils/: helpers.py  response.py
app/workers/: image_processing.py
scripts/localstack/: init.sh
tests/: test_api.py  test_helpers.py  test_s3_client.py
